fix: letter-spacing調整

--- a/sass/layout/_sub-page-fv.scss
+++ b/sass/layout/_sub-page-fv.scss
@@ -87,6 +87,7 @@
 
   span {
     display: block;
+    @include m.letter-spacing($letter-spacing: -2);
 
     @include g.mq() {
       display: inline-block;
